--- a/index.html
+++ b/index.html
@@ -7,10 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="banner">
 
+            <div class="banner-info">
+
+                <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+
+            <p class="description">It is a long established fact that <br> a reader will be distracted by the readable content of a page when looking at its layout. <br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn-primary">Shope Now</button>
+            
+
+            </div>
+            <img class="banner-pic" src="images/pngwing 10.png" alt="">
+            
+
+        </div>
     </header>
     <main>
+        <section>
+            <div class="about">
+                <h3 class="section-title">Our Featured Flowers</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+
+            </div>
+        </section>
 
     </main>
     <footer>
