--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
                 <div class="footer-small">
-                    <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+                    <p>@2020-2023, FlowerShop.com. All rights reserved. gi</p>
                 </div>
 
                 
