--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <div class="banner-info">
 
-                <h1 class="banner-title">Let's talk<br> beautiful flowers a <br> part of your life.</h1>
+                <h1 class="banner-title">Let's make<br> beautiful flowers a <br> part of your life.</h1>
 
             <p class="description">It is a long established fact that <br> a reader will be distracted by the readable content of a page when looking at its layout. <br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
             <button class="btn-primary">Shope Now</button>
